--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Page Styles -->
     <link rel="stylesheet" href="css/styles.css" />
     <!-- Font Awesome -->
-    <script src="https://use.fontawesome.com/6ad2a4b74b.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 </head>
 
 <body data-ng-app="app" ng-controller="PortfolioController as main">
