--- a/index.html
+++ b/index.html
@@ -124,31 +124,31 @@
 
             vm.images = [
                 {
-                    name: "assets/kvite-googlemaps2.png",
+                    name: "assets/kvite-googlemaps.jpg",
                     details: "Implemented Google Maps API over Ajax to display maps, to perform geocoding lookups, and to get address typeahead predictions."
                 },
                 {
-                    name: "assets/kvite-uploads2.png",
+                    name: "assets/kvite-uploads.jpg",
                     details: "Worked with Amazon Web Services S3. A reusable loosely-coupled AngularJS asset that communicated through Angular events."
                 },
                 {
-                    name: "assets/kvite-messages.png",
+                    name: "assets/kvite-messaging.jpg",
                     details: "Integrated site wide navigation menus. Used AngularJS filter to build a dynamic contact messaging system with data from SQL server."
                 },
                 {
-                    name: "assets/localshows-mockup2.png",
+                    name: "assets/localshows.jpg",
                     details: "This project is under construction. Local Shows is a web app that allows upcoming artists to announce their events and get noticed - restaurants, museums, non-profits, record stores, etc."
                 },
                 {
-                    name: "assets/daft-punk-cd-and-cover.png",
+                    name: "assets/daft-punk-cd-and-cover.jpg",
                     details: "Mock up CD insert and CD design for Daft Punk."
                 },
                 {
-                    name: "assets/dafpunk-poster.jpg",
+                    name: "assets/daftpunk-poster.jpg",
                     details: "Mock-up poster design for Daft Punk. "
                 },
                 {
-                    name: "assets/american-psycho-illustration.png",
+                    name: "assets/american-psycho-illustration.jpg",
                     details: "American Psycho illustration."
                 },
                 {
