--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Erika Merced Portfolio</title>
+    <!-- Hi.. :)  I'm Erika! I have a background in graphic design, dipped into development, and found myself inbetween with a passion for UI/UX.-->
+    <!-- You can usually find me designing, learning new tech, or working with CSS. When I'm not doing that, I'm usually out enjoying nature. -->
     <!--Google Web Font-->
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
@@ -97,7 +99,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.min.js"></script>
 
     <script type="text/javascript">
-        // inclide ui.bootstrap for modal, duScroll for scrollSpy 
+        // include ui.bootstrap for modal, duScroll for scrollSpy 
         var app = angular.module("app", ["ui.bootstrap", "duScroll"]);
 
         // include for scroll bottom spy (duScroll);
@@ -137,7 +139,26 @@
                 },
                 {
                     name: "assets/localshows.jpg",
-                    details: "This project is under construction. Local Shows is a web app that allows upcoming artists to announce their events and get noticed - restaurants, museums, non-profits, record stores, etc."
+                    details: "Local Shows is a web app that allows upcoming artists to announce their events and get noticed - restaurants, museums, non-profits, record stores, etc."
+                },
+                {
+                    name: "assets/concertz-phoneapp.jpg",
+                    details: "Concertz: Mock design for an Account Settings phone App based on concerts and shows around your tracked locations. Change username workflow"
+                }
+                ,
+                {
+                    name: "assets/sequoia-landing.jpg",
+                    details: "Mock landing page based on Sequoia Kings Canyon, one of my favorite places."
+                }
+                ,
+                {
+                    name: "assets/payment-method.jpg",
+                    details: "Saved Payment method selection page with link to add other payment method."
+                }
+                ,
+                {
+                    name: "assets/sign-in-form.jpg",
+                    details: "General Sign In form with Forgot Password and Make an account link."
                 },
                 {
                     name: "assets/daft-punk-cd-and-cover.jpg",
