--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
-     <!-- Hi.. :)  I'm Erika! I have a background in graphic design, dipped into development, and found myself inbetween with a passion for UI/UX.-->
+    <!-- Hi.. :)  I'm Erika! I have a background in graphic design, dipped into development, and found myself inbetween with a passion for UI/UX.-->
     <!-- You can usually find me designing, learning new tech, or working with CSS. When I'm not doing that, I'm usually out enjoying nature. -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,9 +12,11 @@
     <!--Google Web Font-->
     <link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
+        crossorigin="anonymous">
     <!-- Page Styles -->
     <link rel="stylesheet" href="css/styles.css" />
     <!-- Font Awesome -->
@@ -28,7 +31,8 @@
         <div class="container">
             <div class="navbar-header">
                 <div class="navbar-toggle collapsed pull-left nav-name" data-toggle="collapse" aria-expanded="false" aria-controls="navbar">Erika Merced</div>
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+                    aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -42,9 +46,15 @@
                     </div>
                 </div>
                 <ul class="nav navbar-nav">
-                    <li class="nav-anim"><a href="#section-1" du-smooth-scroll du-scrollspy="section-1">Main</a></li>
-                    <li class="nav-anim"><a href="#section-2" du-smooth-scroll du-scrollspy="section-2">Work</a></li>
-                    <li class="nav-anim"><a href="#section-3" du-smooth-scroll="section-3" du-scrollspy>Contact</a></li>
+                    <li class="nav-anim">
+                        <a href="#section-1" du-smooth-scroll du-scrollspy="section-1">Main</a>
+                    </li>
+                    <li class="nav-anim">
+                        <a href="#section-2" du-smooth-scroll du-scrollspy="section-2">Work</a>
+                    </li>
+                    <li class="nav-anim">
+                        <a href="#section-3" du-smooth-scroll="section-3" du-scrollspy>Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -82,13 +92,17 @@
     <!--End Image Container-->
     <!-- Social Media -->
     <div class="social-medial-container">
-        <strong class="hire-me" id="section-3">Hire Me  </strong>
+        <strong class="hire-me" id="section-3">Hire Me </strong>
         <i type="button" class="fa fa-envelope" aria-hidden="true" popover-placement="top" uib-popover="mercederika@gmail.com"></i>
-        <a target="_blank" href="http://github.com/mercederika"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a target="_blank" href="https://www.linkedin.com/in/mercederika"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <a target="_blank" href="http://github.com/mercederika">
+            <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+        <a target="_blank" href="https://www.linkedin.com/in/mercederika">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+        </a>
     </div>
     <!-- End Social Media -->
-    
+
     <!-- AngularJS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
     <!-- Bootstrap UI -->
@@ -96,9 +110,13 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
     <!-- Angular Scroll -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-scroll/1.0.2/angular-scroll.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="linkify.min.js"></script>
+    <script src="linkify-jquery.min.js"></script>
 
     <script type="text/javascript">
         // include ui.bootstrap for modal, duScroll for scrollSpy 
@@ -127,6 +145,14 @@
             var vm = this;
 
             vm.images = [
+                {
+                    name: "assets/opie.jpg",
+                    details: "10 Meter Walking coding challenge. The layout was designed in Adobe XD and coded in React and styled using CSS3. Check out the live demo mercederika.github.io/opieapp"
+                },
+                {
+                    name: "assets/metrics-dashboard.jpg",
+                    details: "Mock UI of a metrics dashboard. The dashboard was designed to give the user quick details on their eShop as well as latest filerable sale trends. Dashboard UI Kit used. "
+                },
                 {
                     name: "assets/kvite-googlemaps.jpg",
                     details: "Implemented Google Maps API over Ajax to display maps, to perform geocoding lookups, and to get address typeahead predictions."
@@ -197,4 +223,5 @@
     </script>
 
 </body>
+
 </html>
