--- a/index.html
+++ b/index.html
@@ -186,6 +186,14 @@
                     details: "General Sign In form with Forgot Password and Make an account link."
                 },
                 {
+                    name: "assets/account-view.jpg",
+                    details: "Mock mobile navigation menu and account view. The dark theme design was based on a crypto currency tracker. Cooin Finance UI kit used."
+                },
+                {
+                    name: "assets/app-icon.jpg",
+                    details: "App icon designed for a recepie keeper app, Homemade."
+                },
+                {
                     name: "assets/daft-punk-cd-and-cover.jpg",
                     details: "Mock up CD insert and CD design for Daft Punk."
                 },
